# setup-test

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  code_scan_this.py  coverage_report.txt  deploy.sh  event.json  generate_coverage.py  generate_coverage_report.py  hello.json  oas_interpolator.py  pytest.ini  reyrey_temp  samconfig.toml  setup.cfg  sidekick_temp  sonar-project.properties  template.yaml  test.py  test_crm_api.py  test_integration.cfg  test_unit.cfg
.cursor/: conftest_template_v1.txt  test_template_v5.txt  test_template_v6.txt
.github/prompts/: pr_summarization_instructions.txt
.github/workflows/: converage.yml  deploy.yml  deploy_pr.yml  deploy_test.yml  jira.yml  linter_javascript.yml  linter_python.yml  linting.yml  pr_summarization.yml  ruff.yml  run_all_tests.yml  run_unit_tests.yml  samlint.yml
.octopus/: deployment_process.ocl  parameters.json  variables.ocl
.octopus/runbooks/: test-runbook.ocl
.octopus/scripts/: deploy_release.sh
DDL/: appt.sql  cdpi.sql  crm.sql  dms.sql  inventory.sql
api-monitoring/: api-monitoring.py  deploy.sh  samconfig.toml  template.yaml
app/: authorizer.py  dealer_inbound.py  dms_data_service_inbound.py  integration_partner.py  vehicle_sale_inbound.py
appointment/: README.md
appointment-api/: template.yaml
appointment-api/app/: check_dealer_opcodes.py  create_appointment.py  rds_instance.py  requirements.txt  retrieve_appointments.py  retrieve_timeslots.py  utils.py
appointment-api/swagger/: appointment-service-oas.yaml
appointment-api/tests/: test_create_appointments.py  test_retrieve_appointments.py  test_timeslots.py
appointment-integrations/XTime/: deploy.sh  template.yaml
appointment/appointment-api/: deploy.sh  samconfig.toml  template.yaml
appointment/data_migration_script/: service_type.sql
carlabs/: deploy.sh  import_dip.py  mapper.py  samconfig.toml  script.py  template.yaml  template.yml  test.py
carlabs/app/: data_pull.py  etl.py  repair_order_data_pull.py  repair_order_etl.py  requirements.txt  utils.py
carlabs/state_machines/: repair_order.json  sales_history.json
carlabs/tests/: conftest.py  test_cdk_transformer.py  test_dealertrack_transformer.py  test_dealervault_transformer.py
cdpi-layer/shared-resources/: template.yaml
cdpi/cdpi-internal-api/: deploy.sh  samconfig.toml  template.yaml
cdpi/scripts/: ex_cdpi_consumer_ids.csv  ex_cdpi_consumer_profile.csv  mock_matched_upload.py  mock_summary_upload.py  trigger_consumer_ingestion.py
cdpi/shared-resources/: deploy.sh  samconfig.toml  template.yaml
crm/: README.md
crm-api/: README.md  deploy.sh  oas_interpolator.py  samconfig.toml  template.yaml
crm-api/app/: activity_etl.py  activity_etl_task.py  authorizer.py  create_activity.py  create_consumer.py  create_lead.py  create_salesperson.py  requirements.txt  retrieve_consumer.py  (+8 more)
crm-reporting/: template.yaml
data-reprocessing/: api_events.py  redrive_dlq.py  sqs_events.py
deploy/: build_cfninit_artifact.sh  build_code_artifact.sh
dms/: README.md
dms-api/: template.yaml
dms-reporting/: deploy.sh  samconfig.toml  template.yaml
dms-service/: deploy.sh  oas_interpolator.py  samconfig.toml  template.yaml
dms-unified/: samconfig.toml  template.yaml
dms_data_service/: oas_interpolator.py  template.yaml
dms_etl/: template.yaml
dms_etl_job/: template.yaml
dms_orm/: create_db_uri.py  session_config.py
dms_upload_api/: README.md  app.py  config.py  main.py  requirements.txt
email-service/: deploy.sh  samconfig.toml  template.yaml
event-publishing-api/: template.yaml
inventory/: README.md
inventory/scripts/: pyproject.toml
inventory/scripts/shared_layer_insert_load_script/: rds_instance.py  shared_layer_load.py
kawasaki/: README.md  deploy.sh  kawasaki_config.json  sample_kawasaki_config.json  template.yaml
lambdas/: deploy.sh  template.yaml
migrations/: 20240125_init.sql  20240201_inventory.sql
notification-service/: README.md  deploy.sh  samconfig.toml  template.yaml  test.py
reyrey/: deploy.sh  reyrey_etl.py  template.yaml
swagger/: api_interpolation_data.py  dms-data-service-oas.yaml
tekion/: deploy.sh  tekion_etl.py  template.yaml
udp-events/: deploy.sh  samconfig.toml  template.yaml
unified-data/: README.md  app.py  requirements.txt
univ-suite/: Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yaml  samconfig.toml  template.yaml
universal_integrations_db/: create_db_uri.py  session_config.py  setup.py  testfile.py
utils/: config_nginx.sh
wbns/: README.md  deploy.sh  samconfig.toml  template.yaml
(+1213 files in other folders)
