[tool.poetry]
name = "shared_layer_insert_load_script"
version = "0.1.0"
description = ""
authors = ['Shantanu']

[[tool.poetry.source]]
name = "spincar"
url = "https://pypi.spincar.com"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.10" # https://github.com/python-poetry/poetry/issues/4316#issuecomment-892435209
ipython = "^8.14.0"
rapidfuzz = "^3.6.2"

[tool.poetry.group.common.dependencies]
aws-xray-sdk = "^2.10.0"
awswrangler = "^3.9.0"
beautifulsoup4 = "^4.11.1"
boto = "^2.49.0"
boto3 = "^1.24.71"
CairoSVG = "^2.7.0"
certifi = ">=2022" # we import this directly. it is a very common dependency. should basically always be up-to-date.
cryptography = "^38.0.1"
cssselect = "^1.1.0"
cvxpy = {version = "^1.2.1", markers = 'platform_machine != "aarch64"'} # NOTE: Package version incompatible with Ubuntu ARM. You can pip install from source.
elasticsearch = "==8.11.0" # NOTE keep in sync with BEATS_VER in deploy/suite_app/bootstrap/cfn_init/beats/config.sh
eventlet = "^0.33.1"
fastcache = "^1.1.0"
Flask = "<=1.1.4" # request.values changed in 2.0.0. See https://impel.atlassian.net/browse/TD-75
Flask-Admin = "^1.6.0"
Flask-Limiter = "1.5" # only used by find_spin_api
Flask-Security = "^3.0.0"
Flask-SQLAlchemy = "^2.5.1"
flask-jwt-extended = "4.3.1"
future = "^0.18.2"
gevent = "^23.9.0"
google-api-python-client = "^2.61.0"
google-auth-oauthlib = "^0.5"
jsonref = "^1.0.1"
lxml = "^4.9.1" # our use of openpyxl depends on lxml. TODO does our use of beautifulsoup depend on lxml?
markupsafe = "==2.0.1" # import jinja2 error with 2.1. See https://impel.atlassian.net/browse/TD-75
ndg-httpsclient = "^0.5.1"
numpy = "<=1.22" # UserWarning starting with 1.22. likely not an actual problem. See https://impel.atlassian.net/browse/TD-75
oauth2client = "^4.1.3"
opencv-contrib-python = "^4.6.0.66"
opencv-python = "^4.6.0.66"
openpyxl = "==3.0.1" # bug introduced in 3.0.2. module attributes removed in 3.0.4. See https://impel.atlassian.net/browse/TD-75
pandas = "^1.5.1" # Will ask David to test latest release, they used 1.1.5
passlib = "^1.7.4"
pdfkit = "^1.0.0"
Pillow = "^9.2.0"
psycogreen = "^1.0.2"
psycopg2 = "^2.9.3"
pycairo = "^1.21.0" # no linux wheels. install requires ubuntu libcairo2-dev. suite/common runtime requires librsvg2-dev
pycryptodome = "^3.15.0"
pydantic = "^1.10.5"
pygal = "^3.0.0"
PyGObject = "^3.42.2" # no wheels. install requires ubuntu libgirepository1.0-dev
pyOpenSSL = "^22.0.0"
pytest = "^7.1.3" # required because spincar_app_api imports from dev_api_endpoints; fix that file and move this to tests group
python-dateutil = "^2.8.2"
pytz = "^2022.2.1"
redis = "^4.3.4" # spincar_lib.application_cache runtime requires ubuntu redis-server
requests = "^2.28.1"
sauceclient = "^1.0.0"
scipy = "^1.9.1"
selenium = "<=3.141.0" # find_element_by_* commands deprecated in version 4.0.0
simple-salesforce = "^1.12.1"
spincar-lib = {version = "^4.0.2", source = "spincar"}
spincar-utils = {version = "^3.0.5", source = "spincar"}
structlog = "^22.1.0"
subprocess32 = "^3.5.4" # FIXME for people using Ubuntu 22.04 on master branch, and for production deployments transitioning from ubuntu 18 to ubuntu 22
tensorflow = {version = "~2.13", markers = 'platform_machine != "aarch64"'}  # error importing 2.10. See https://impel.atlassian.net/browse/TD-75 Version doesn't exist in Ubuntu ARM
tensorflow-text = {version = "~2.13", markers = 'platform_machine != "aarch64"'} # minor version should match tensorflow due to its tensorflow dependency version constraint. ^ Same
tinycss = "^0.4"
urllib3 = "^1.26.12"
uWSGI = "^2.0.20"
uwsgitop = "^0.11"
WTForms = { extras = ["email"], version = "*" } # TODO how does poetry select extras versions?
pytest-mock = "^3.10.0"
aiohttp = "^3.8.5"
spincar-db = {version = "^3.8.11", source = "spincar"}
SQLALchemy = "<1.4"

[tool.poetry.group.gpu.dependencies]
keras-retinanet = "^1.0.0"

[tool.poetry.group.manager.dependencies]
"Files.com" = "^1.0.915"

[tool.poetry.group.tests.dependencies]
Appium-Python-Client = "<1.0.0" # version ^2 depended on selenium ^4 - also avoiding upgrading to ^1 for the moment
Faker = "^14.2.0"
filelock = "^3.8.0"
GitPython = "^3.1.41"
mock = "^4.0.3"
pytest-xdist = "^2.5.0"
selenium = "<=3.141.0" # duplicated in this group for `poetry export --only=test`, for jenkins
termcolor = "^2.0.1"
xmltodict = "^0.13.0"
prettytable = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
